# naver_cafe_crawling

./: constant.py  mysql.py  naver.sh  naver_t3c_crawl.py  pyproject.toml  requirements.txt
constants/: etc.py
db/: constant.py  mysql.py
peterpan/: app_zoonggae.py  jjin_zoonggae.py
t3c/: naver_t3c_crawl.py
