[tool.poetry]
name = "naver_t3c"
version = "0.1.0"
description = ""
authors = ["martinalee94 <martinalee0528@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.40"
PyMySQL = "^1.0.2"
selenium = "^4.4.0"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
black = "^22.8.0"
flake8 = "^5.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
